Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp
  namespace: insure-tech
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
      - name: scaletestapp
        image: ghcr.io/yandex-practicum/scaletestapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "15Mi"
          limits:
            memory: "30Mi"
      restartPolicy: Always
