Task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp
  namespace: insure-tech
  labels:
    app: scaletestapp
spec:
  selector:
    app: scaletestapp
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
