Task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scaletestapp-ingress
  namespace: insure-tech
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: insure.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scaletestapp
                port:
                  number: 8080
